[gd_scene load_steps=2 format=2]

[ext_resource path="res://atv5.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_right = 175.0
margin_bottom = 43.0
text = "Primeiro Botão"

[node name="Button2" type="Button" parent="."]
margin_left = 4.0
margin_top = 75.0
margin_right = 179.0
margin_bottom = 118.0
text = "Segundo Botão"

[node name="Button3" type="Button" parent="."]
margin_left = 2.0
margin_top = 155.0
margin_right = 177.0
margin_bottom = 198.0
text = "Terceiro Botão"

[node name="Label" type="Label" parent="."]
margin_left = 279.0
margin_top = 2.0
margin_right = 396.0
margin_bottom = 42.0

[node name="Label2" type="Label" parent="."]
margin_left = 278.0
margin_top = 80.0
margin_right = 395.0
margin_bottom = 120.0

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 197.0
margin_top = 19.0
margin_right = 255.0
margin_bottom = 43.0

[node name="LineEdit2" type="LineEdit" parent="."]
margin_left = 198.0
margin_top = 87.0
margin_right = 256.0
margin_bottom = 111.0

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
